crates/oxc_react_compiler/tests/snapshots/flatten-scopes-with-methodcall-hook.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/flatten-scopes-with-methodcall-hook.js
---
const { ObjectWithHooks } = require("shared-runtime");
function Component(props) {
	const x = [];
	const [y] = ObjectWithHooks.useMakeArray();
	x.push(y);
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
