crates/oxc_react_compiler/tests/snapshots/fn-name-no-leak-to-nested-arrow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fn-name-no-leak-to-nested-arrow.js
---
// @loggerTestOnly @outputMode:"lint"
function Component() {
	return null;
}
export const ENTRYPOINT = {
	fn: Component,
	params: [{ onChange: () => {} }]
};
