crates/oxc_react_compiler/tests/snapshots/for-empty-update-with-continue.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-empty-update-with-continue.js
---
function Component(props) {
	let x = 0;
	for (let i = 0; i < props.count;) {
		x = x + i;
		i = i + 1;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
