crates/oxc_react_compiler/tests/snapshots/for-empty-update.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-empty-update.js
---
function Component(props) {
	let x = 0;
	for (const i = 0; 0 < props.count;) {
		x = x + 0;
		if (x > 10) {
			break;
		}
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
