crates/oxc_react_compiler/tests/snapshots/for-expression-initializer.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-expression-initializer.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(3);
	const { start, end } = t0;
	let values;
	if ($[0] !== end || $[1] !== start) {
		let index;
		let initCount = 0;
		values = [];
		for (index = 0; index < start; index++) {
			values.push(index);
		}
		for (const t1 = (index = start, initCount++); index < end; index++) {
			values.push(index);
		}
		for (const t2 = start < end ? values.push(-1) : values.push(-2); false;) {}
		for (const t3 = start && values.push(-3); false;) {}
		const optionalValues = start ? values : null;
		for (const t4 = optionalValues?.push(-4); false;) {}
		$[0] = end;
		$[1] = start;
		$[2] = values;
	} else {
		values = $[2];
	}
	return `${1}:${values.join(",")}`;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		start: 1,
		end: 3
	}],
	sequentialRenders: [{
		start: 2,
		end: 5
	}, {
		start: 0,
		end: 0
	}]
};
