crates/oxc_react_compiler/tests/snapshots/for-in-statement-body-always-returns.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-in-statement-body-always-returns.js
---
function Component(props) {
	for (const x in props.value) {
		return x;
	}
	return null;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: { a: "A!" } }]
};
