crates/oxc_react_compiler/tests/snapshots/for-in-statement-break.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-in-statement-break.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.value) {
		const object = { ...props.value };
		for (const y in object) {
			if (y === "break") {
				break;
			}
			x = object[y];
		}
		$[0] = props.value;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		a: "a",
		break: null,
		c: "C!"
	}]
};
