crates/oxc_react_compiler/tests/snapshots/for-in-statement-continue.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-in-statement-continue.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.value) {
		const object = { ...props.value };
		for (const y in object) {
			if (y === "continue") {
				continue;
			}
			x = object[y];
		}
		$[0] = props.value;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: {
		a: "a",
		continue: "skip",
		b: "hello!"
	} }],
	sequentialRenders: [
		{ value: {
			a: "a",
			continue: "skip",
			b: "hello!"
		} },
		{ value: {
			a: "a",
			continue: "skip",
			b: "hello!"
		} },
		{ value: {
			a: "skip!",
			continue: true
		} },
		{ value: {
			a: "a",
			continue: "skip",
			b: "hello!"
		} },
		{ value: {
			a: "skip!",
			continue: true
		} },
		{ value: {
			a: "a",
			continue: "skip",
			b: "hello!"
		} },
		{ value: {
			a: "skip!",
			continue: true
		} },
		{ value: {
			a: "skip!",
			continue: true
		} }
	]
};
