crates/oxc_react_compiler/tests/snapshots/for-in-statement-empty-body.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-in-statement-empty-body.js
---
function Component(props) {
	let x;
	for (const y in props.value) {}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: {
		a: "a",
		b: "B",
		c: "C!"
	} }]
};
